sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var len=getValueCount()
  var bool=false
  var swapp=false
  while(bool==false){
  for(i<-0 to len-2){
      if(isSmaller(i,i+1)){
        swap(i,j)
        swapp=true
      if(swapp==false && i==len-1) {
        bool==true
      }
      }
    }
  }
}
